# bhowmik2025_et_al_plots

./: .gitignore  README.md  fits_files.csv  pyproject.toml  setup.py
docs/: specific_ins.md
src/bhowmik2025_et_al_plots/: __main__.py  images_latex.py  info.txt  plotter_w_decorators.py  plotter_w_decorators_w_residuals.py  table_creator.py
src/bhowmik2025_et_al_plots.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/bhowmik2025_et_al_plots/utils/: __init__.py  add_patches.py  jy_per_sr_to_jy_per_beam.py  paths.py
src/bhowmik2025plots/: .fuse_hidden000084ff00000001  Untitled-1.md  main.py  plotter_w_decorators.py  table_creator.py
src/bhowmik2025plots/input_files/: fits_files.csv  full_table.csv  full_table_expanded.csv  gap_ring_infl_pt.csv  table.csv
src/bhowmik2025plots/input_files/fits_files/: ISO-Oph_123_all_p0_bigmask.fits  ISO-Oph_123_frank_model.fits  ISO-Oph_13_all_p0_bigmask.fits  ISO-Oph_13_frank_model.fits  ISO-Oph_193_all_p0_bigmask.fits  ISO-Oph_193_frank_model.fits  ISO-Oph_208_all_p0_bigmask.fits  ISO-Oph_208_frank_model.fits  ODISEA_C4_001_all_p0_bigmask.fits  ODISEA_C4_001_frank_model.fits  ODISEA_C4_007_all_p0_bigmask.fits  ODISEA_C4_007_frank_model.fits  ODISEA_C4_009_all_p0_bigmask.fits  ODISEA_C4_009_frank_model.fits  (+188 more)
src/bhowmik2025plots/outputs/: all_figures.tex
src/bhowmik2025plots/utils/: __init__.py  add_patches.py  arc_to_au.py  fix_ticks.py
tests/: 1by1testlimits.ipynb  exoplanets_test.ipynb  images_latex.ipynb  plotter_trisha_nowcs.ipynb  stages_demo_plotter.ipynb  table_creator.ipynb  tests.py  todo.txt
(+122 files in other folders)
